SUBDIRS = \
	. \
	libs

noinst_LIBRARIES = \
	libzbxmocktest.a \
	libzbxmockdata.a

libzbxmocktest_a_SOURCES = \
	zbxmocktest.c \
	zbxmocktest.h

libzbxmockdata_a_SOURCES = \
	zbxmockdb.c \
	zbxmockdb.h \
	zbxmockdir.c \
	zbxmockexit.c \
	zbxmockfile.c \
	zbxmockstat.c \
	zbxmockdata.c \
	zbxmockdata.h \
	zbxmockassert.c \
	zbxmockassert.h \
	zbxmockutil.c \
	zbxmockutil.h \
	zbxmocktime.c \
	zbxmockhelper.c \
	zbxmockhelper.h \
	zbxmockcomm.c \
	zbxmocklog.c
